# calc

./: .gitignore  README.md  buildozer.spec  main.py
.github/workflows/: build-android.yml
calc/: CLAUDE.md  buildozer.spec  pyproject.toml
calc/src/calculator/: app.py  engine.py
calc/tests/: test_engine.py
src/calculator/: calculator.kv  main.py
