[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "Scientific Calculator for Android (Kivy)"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "mypy>=1.15",
]

[project.scripts]
calculator = "src.calculator.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
